--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^3.0.1",
+    "react-icons": "^5.5.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -33,10 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.8"
   }
 }
